--- a/app/index.html
+++ b/app/index.html
@@ -9,17 +9,28 @@
 
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400.500.700.400italic">
     <link rel="stylesheet" href="./bower_components/angular-material/angular-material.min.css">
+    <link rel="stylesheet" href="./bower_components/angular-material-icons/angular-material-icons.css">
     <link rel="stylesheet" href="./assets/app.css">
 </head>
 
-<body ng-cloak ng-controller="mainController as vm">
-    <h1>hello</h1> {{ vm.message }}
+<body layout="row" ng-cloak ng-controller="mainController as vm">
+    <div ng-include="'dist/views/sidenav.html'" layout="vertical">
+
+    </div>
+    <div layout="column" flex>
+        <div ng-include="'dist/views/toolbar-header.html'">
+        </div>
+        <md-content flex id="content">
+            Main Content
+        </md-content>
+    </div>
     <script src="./bower_components/angular/angular.js"></script>
     <script src="./bower_components/angular-animate/angular-animate.js"></script>
     <script src="./bower_components/angular-aria/angular-aria.js"></script>
     <script src="./bower_components/angular-material/angular-material.js"></script>
-
+    <script src="./bower_components/angular-material-icons/angular-material-icons.js"></script>
     <script src="./dist/controllers/mainController.js"></script>
+    <script src="./dist/services/userService.js"></script>
     <script src="./dist/boot.js"></script>
 </body>
 
